--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
             </div>
 
             <button class="promo_btn">Записаться на интенсив!</button>
-
             <div class="promo_know_more">
                 <div class="promo_know_more_text">узнать больше об интенсиве</div>
                 <img src="icons/arrow_down.png" alt="arrow_down" class="promo_know_more_img">
@@ -45,10 +44,9 @@
             <div class="waiting_wrapper">
                 <div class="waiting_item">
                     <img src="img/waiting/waiting_1.png" alt="waiting_1" class="waiting_img">
-                    <div class="waiting_descr">Всего за два бесплатных вебинара мы научим вас,
-                        как создать свой сайт на WordPress.</div>
+                    <div class="waiting_descr">Всего за два бесплатных вебинара мы научим вас, как создать свой сайт на WordPress.</div>
                 </div>
-                <div class="waiting_item" id="center">
+                <div class="waiting_item">
                     <img src="img/waiting/waiting_2.png" alt="waiting_2" class="waiting_img">
                     <div class="waiting_descr">Покажем, как правильно оптимизировать сайт и сделать его привлекательным для поисковых систем. Только свежая, профессиональная и актуальная информация!</div>
                 </div>
@@ -57,6 +55,77 @@
                     <div class="waiting_descr">Вы узнаете, что такое «хорошая индексация»,«высокая посещаемость», «стабильный прирост посетителей», «ТОП по запросам» и, что намного важнее, как добиться всех этих показателей!</div>
                 </div>
             </div>    
+        </div>
+    </section>
+
+    <section class="optimization">
+        <div class="container">
+            <h2 class="optimization_header">Что такое оптимизация и зачем она нужна?</h2>
+            <div class="optimization_text">На просторах интернета несчетное количество действующих и даже заброшенных сайтов. Большинство из    них совпадает не только по категориям, но и по содержанию.
+                <br><br> 
+                Представьте себе тысячи сайтов, на которых тем или иным образом предоставляется одна и та же информация или продается одна и та же услуга. И попасть на эти сайты можно лишь по тематическим запросам в поисковых системах.
+                <br><br>
+                Но как вам быть, если ваш сайт похож на сотню или тысячу таких же, а на одной странице гугла или яндекса всего 10 позиций? Как привести посетителей страницы своего ресурса? Именно для этого и нужна оптимизация – для вывода вашего сайта на первую страницу поиска!
+                <br><br> 
+                <span>Мы научим вас, как сделать ваш сайт привлекательным для поисковых систем и посоветуем, как вывести его на первые страницы, обходя всех конкурентов.</span></div>
+            <img src="/img/bg/woman_bg.jpg" alt="woman" class="optimization_img">    
+        </div>
+    </section>
+
+    <section class="finish">
+        <div class="container">
+            <h2 class="finish_header">По окончании обучения Вы сможете!</h2>
+            <div class="finish_line"></div>
+            <div class="finish_wrapper">
+                <div class="finish_item">
+                    <img src="/icons/finish/1.png" alt="1" class="finish_img">
+                    <div class="finish_descr">Создать свой сайт или блог</div>
+                </div>
+                <div class="finish_item">
+                    <img src="/icons/finish/2.png" alt="2" class="finish_img">
+                    <div class="finish_descr">Правильно его оптимизировать</div>
+                </div>
+                <div class="finish_item">
+                    <img src="/icons/finish/3.png" alt="3" class="finish_img">
+                    <div class="finish_descr">Обеспечить ему медленный, но верный рост в ТОП</div>
+                </div>
+                <div class="finish_item">
+                    <img src="/icons/finish/4.png" alt="4" class="finish_img">
+                    <div class="finish_descr">Достигнуть стабильного прироста посетителей</div>
+                </div>
+                <div class="finish_item">
+                    <img src="/icons/finish/5.png" alt="5" class="finish_img">
+                    <div class="finish_descr">Получать ощутимую прибыль</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="gift">
+        <div class="container">
+            <img src="/icons/gift.png" alt="gift" class="gift_img">
+            <div class="gift_text">Для всех участников интенсива предусмотрены бонусы и подарки. Нажимайте на кнопку ниже, принимайте участие в вебинарах и забирайте свой приз по окончании обучения!</div>
+            <button class="gift_btn">Записаться на интенсив!</button>
+        </div>
+    </section>
+
+    <section class="webinar">
+        <div class="container">
+            <img src="/img/first.jpg" alt="first_webinar" class="webinar_img">
+            <h2 class="webinar_header">Первый вебинар состоится:</h2>
+            <div class="webinar_text_date">10 сентября в 20:00 по Москве</div>
+            <div class="webinar_text_descr">Успейте записаться, количество мест ограничено!</div>
+        </div>
+    </section>
+
+    <section class="footer">
+        <div class="container">
+            <div class="footer_ref">
+                <a href="#" class="footer_support">Служба поддержки</a>
+                |
+                <a href="#" class="footer_privacy">Политика конфиденциальности</a>
+            </div>
+            <div class="footer_call">Позвоните нам 8-800-555-01-21</div>
         </div>
     </section>
 
